test/associative/bharshbarg/domains/badSubsetCall.good
badSubsetCall.chpl:3: error: isSubset not supported on rectangular domains
